# MonoChat

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile
.github/workflows/: CD.yml  CI.yml
client/: ChatUI.cpp  ChatUI.h  Client.cpp  Client.h
server/: ClientPool.cpp  ClientPool.h  Server.cpp  Server.h
tests/: CMakeLists.txt  ClientPoolTest.cpp
